--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
+
 <body>
     <nav class="navbar">
         <div class="max-width">
@@ -35,7 +37,7 @@
                 <div class="text-3">and I'm a <span class="typing">Student</span></div>
                 <a href="#about">- more about me</a>
             </div>
-        </div> 
+        </div>
     </section>
 
 
@@ -56,7 +58,7 @@
                     <a href="#skills">- Skills details</a>
                 </div>
             </div>
-        </div> 
+        </div>
     </section>
 
 
@@ -87,7 +89,7 @@
                 </div>
 
             </div>
-        </div> 
+        </div>
     </section>
 
 
@@ -112,7 +114,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>CSS</span>
-                            <span>70%</span>
+                            <span>80%</span>
                         </div>
                         <div class="line css">
                         </div>
@@ -120,7 +122,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>50%</span>
+                            <span>90%</span>
                         </div>
                         <div class="line js">
                         </div>
@@ -129,7 +131,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>ReactJS</span>
-                            <span>30%</span>
+                            <span>75%</span>
                         </div>
                         <div class="line react">
                         </div>
@@ -189,15 +191,17 @@
                     </form>
                 </div>
             </div> -->
-        </div>
+            </div>
     </section>
 
 
     <footer>
-        <span>Created By <a href="#">Tushar Gupta</a> | <span class="far fa-copyright"></span> 2021 All right reserved.</span>
+        <span>Created By <a href="#">Tushar Gupta</a> | <span class="far fa-copyright"></span> 2021 All right
+            reserved.</span>
     </footer>
     <br>
     <footer class="last">* * * * * *</footer>
 </body>
 <script src="app.js"></script>
+
 </html>
